// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test all 1`] = `
"
// file: examples/01-introduction/01-basics/App.html
------------------------------
js   = 
------------------------------
css  = 
------------------------------
html = <h1 class=\\"i1b53p6umu\\">Hello World!</h1 class=\\"i1b53p6umu\\">

"
`;

exports[`test all 2`] = `
"
// file: examples/01-introduction/02-adding-data/App.html
------------------------------
js   = 
	let name = 'world';


------------------------------
css  = 
------------------------------
html = 

<h1 class=\\"rwlah02f15\\">Hello \${name.toUpperCase()}!</h1 class=\\"rwlah02f15\\">

"
`;

exports[`test all 3`] = `
"
// file: examples/01-introduction/03-dynamic-attributes/App.html
------------------------------
js   = 
	let src = '/tutorial/image.gif';
	let name = 'Rick Astley';


------------------------------
css  = 
------------------------------
html = 

<img class=\\"iwzx6n08oi\\" \${{src}} alt=\\"\${name} dances.\\">

"
`;

exports[`test all 4`] = `
"
// file: examples/01-introduction/04-styling/App.html
------------------------------
js   = 
------------------------------
css  = 
	p.l6oqt4q7he 
		color: purple;
		font-family: 'Comic Sans MS', cursive;
		font-size: 2em;
	}

------------------------------
html = <p class=\\"l6oqt4q7he\\">This is a paragraph.</p class=\\"l6oqt4q7he\\">



"
`;
